<resources>
    <string name="app_name">TodoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header">Things To Do</string>
    <string name="sub_header">Complete These Tasks !</string>
    <string name="add_task_button">Add Task</string>
    <string name="delete_all_floating_button">Delete All</string>
    <string name="task_title_detail">Title</string>
    <string name="task_detail_detail">Detail</string>
    <string name="update_btn">Update</string>
    <string name="delete_btn">Delete</string>
    <string name="add_to_your_todo_list_add_task_header">Add To Your TODO List</string>
    <string name="add_to_your_todo_list_add_task_sub_header">Enter the task you need to do</string>
    <string name="task_title_Hint">Task Title</string>
    <string name="task_description_hint">Task Description</string>
    <string name="enter_your_text_here_edit_text">Enter your task to be shared </string>
    <string name="share_text_btn">Share Now</string>
    <string name="chooser_title_share_text">Share this task with: </string>
    <string name="complete_radio_button_text">Complete</string>
    <string name="incomplete_radio_button_text">Incomplete</string>
    <string name="complete_radio_btn_text_land">Complete</string>
    <string name="incomplete_radio_btn_text_land">Incomplete</string>
</resources>